--- a/src/main/resources/templates/Client/index.html
+++ b/src/main/resources/templates/Client/index.html
@@ -22,7 +22,7 @@
 <body>
 	<div class="wrapper">
 		<!-- Sidebar  -->
-		<nav  th:fragment="sidebar" id="sidebar">
+		<nav  th:fragment="sidebar"  class="active" id="sidebar">
 			<div class="sidebar-header">
 				<h3>&nbsp;&nbsp;&nbsp;E-c App</h3>
 				<strong><i class="fa fa-shopping-cart" aria-hidden="true"></i></strong>
