--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -238,7 +238,7 @@
 
 											<div class=" mt-2">
 
-												<div class="product  mt-2">
+												<div class="product  mt-2" th:if="${featured !=null}">
 													<span class="off bg-success">-[[${featured.discount.discount}]]%
 														OFF</span>
 													<div class="text-center">
@@ -380,196 +380,6 @@
 									</div>
 								</div>
 							</div>
-
-							<div class="col-md-4 mb-2">
-								<div class="product py-4">
-									<span class="off bg-success">-25% OFF</span>
-									<div class="text-center">
-										<img src="https://i.imgur.com/nOFet9u.jpg" width="200">
-									</div>
-									<div class="about text-center">
-										<h5>XRD Active Shoes</h5>
-										<span>$1,999.99</span>
-									</div>
-									<div
-										class="cart-button mt-3 px-2 d-flex justify-content-between align-items-center">
-										<button class="btn btn-primary text-uppercase">Add to
-											cart</button>
-										<div class="add">
-											<span class="product_fav"><i class="fa fa-heart"></i></span>
-											<span class="product_fav"><i class="fab fa-opencart"></i></span>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-4 mb-2">
-								<div class="product py-4">
-									<span class="off bg-warning">SALE</span>
-									<div class="text-center">
-										<img src="https://i.imgur.com/VY0R9aV.png" width="200">
-									</div>
-									<div class="about text-center">
-										<h5>Hygen Smart watch</h5>
-										<span>$123.43</span>
-									</div>
-									<div
-										class="cart-button mt-3 px-2 d-flex justify-content-between align-items-center">
-										<button class="btn btn-primary text-uppercase">Add to
-											cart</button>
-										<div class="add">
-											<span class="product_fav"><i class="fa fa-heart"></i></span>
-											<span class="product_fav"><i class="fab fa-opencart"></i></span>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-4  mb-2">
-								<div class="product py-4">
-									<div class="text-center">
-										<img src="https://i.imgur.com/PSGrLdz.jpg" width="200">
-									</div>
-									<div class="about text-center">
-										<h5>Acer surface book 2.5</h5>
-										<span>$1,999.99</span>
-									</div>
-									<div
-										class="cart-button mt-3 px-2 d-flex justify-content-between align-items-center">
-										<button class="btn btn-primary text-uppercase">Add to
-											cart</button>
-										<div class="add">
-											<span class="product_fav"><i class="fa fa-heart"></i></span>
-											<span class="product_fav"><i class="fab fa-opencart"></i></span>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-4 mb-2">
-								<div class="product py-4">
-									<span class="off bg-success">-10% OFF</span>
-									<div class="text-center">
-										<img src="https://i.imgur.com/OdRSpXG.jpg" width="200">
-									</div>
-									<div class="about text-center">
-										<h5>Dell XPS Surface</h5>
-										<span>$1,245.89</span>
-									</div>
-									<div
-										class="cart-button mt-3 px-2 d-flex justify-content-between align-items-center">
-										<button class="btn btn-primary text-uppercase">Add to
-											cart</button>
-										<div class="add">
-											<span class="product_fav"><i class="fa fa-heart"></i></span>
-											<span class="product_fav"><i class="fab fa-opencart"></i></span>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-4 mb-2">
-								<div class="product py-4">
-									<!-- <span class="off bg-success">-25% OFF</span> -->
-									<div class="text-center">
-										<img src="https://i.imgur.com/X2AwTCY.jpg" width="200">
-									</div>
-									<div class="about text-center">
-										<h5>Acer surface book 5.5</h5>
-										<span>$2,999.99</span>
-									</div>
-									<div
-										class="cart-button mt-3 px-2 d-flex justify-content-between align-items-center">
-										<button class="btn btn-primary text-uppercase">Add to
-											cart</button>
-										<div class="add">
-											<span class="product_fav"><i class="fa fa-heart"></i></span>
-											<span class="product_fav"><i class="fab fa-opencart"></i></span>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-4 mb-2">
-								<div class="product py-4">
-									<span class="off bg-success">-5% OFF</span>
-									<div class="text-center">
-										<img src="https://i.imgur.com/QQwcBpF.png" width="200">
-									</div>
-									<div class="about text-center">
-										<h5>Xps smart watch 5.0</h5>
-										<span>$999.99</span>
-									</div>
-									<div
-										class="cart-button mt-3 px-2 d-flex justify-content-between align-items-center">
-										<button class="btn btn-primary text-uppercase">Add to
-											cart</button>
-										<div class="add">
-											<span class="product_fav"><i class="fa fa-heart"></i></span>
-											<span class="product_fav"><i class="fab fa-opencart"></i></span>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-4 mb-2">
-								<div class="product py-4">
-									<span class="off bg-warning">SALE</span>
-									<div class="text-center">
-										<img src="https://i.imgur.com/PSGrLdz.jpg" width="200">
-									</div>
-									<div class="about text-center">
-										<h5>Acer surface book 8.5</h5>
-										<span>$3,999.99</span>
-									</div>
-									<div
-										class="cart-button mt-3 px-2 d-flex justify-content-between align-items-center">
-										<button class="btn btn-primary text-uppercase">Add to
-											cart</button>
-										<div class="add">
-											<span class="product_fav"><i class="fa fa-heart"></i></span>
-											<span class="product_fav"><i class="fab fa-opencart"></i></span>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-4 mb-2">
-								<div class="product py-4">
-									<div class="text-center">
-										<img src="https://i.imgur.com/m22OQy9.jpg" width="200">
-									</div>
-									<div class="about text-center">
-										<h5>Tyko Running shoes</h5>
-										<span>$99.99</span>
-									</div>
-									<div
-										class="cart-button mt-3 px-2 d-flex justify-content-between align-items-center">
-										<button class="btn btn-primary text-uppercase">Add to
-											cart</button>
-										<div class="add">
-											<span class="product_fav"><i class="fa fa-heart"></i></span>
-											<span class="product_fav"><i class="fab fa-opencart"></i></span>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-4 mb-2">
-								<div class="product py-4">
-									<div class="text-center">
-										<img src="https://i.imgur.com/OdRSpXG.jpg" width="200">
-									</div>
-									<div class="about text-center">
-										<h5>Dell surface book 5</h5>
-										<span>$1,999.99</span>
-									</div>
-									<div
-										class="cart-button mt-3 px-2 d-flex justify-content-between align-items-center">
-										<button class="btn btn-primary text-uppercase">Add to
-											cart</button>
-										<div class="add">
-											<span class="product_fav"><i class="fa fa-heart"></i></span>
-											<span class="product_fav"><i class="fab fa-opencart"></i></span>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
 
 			</div>
 			<div class="line"></div>
